--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "homepage": "https://github.com/limikael/PixiApp",
   "devDependencies": {
     "browserify": "^6.1.0",
+    "grunt": "^0.4.5",
     "pixi.js": "^1.6.1",
     "qsub": "0.0.6"
   }
