--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "devDependencies": {
     "browserify": "^6.1.0",
     "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^0.5.0",
     "pixi.js": "^1.6.1",
-    "qsub": "0.0.6"
+    "qsub": "0.0.6",
+    "jasmine-node": "^2.0.0-beta4"
   }
 }
