--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
   },
   "homepage": "https://github.com/limikael/PixiApp",
   "devDependencies": {
+    "async": "^0.9.0",
     "browserify": "^6.1.0",
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.0",
+    "jasmine-node": "^2.0.0-beta4",
     "pixi.js": "^1.6.1",
     "qsub": "0.0.6",
-    "jasmine-node": "^2.0.0-beta4"
+    "yuidoc-die-on-warnings": "^0.0.2",
+    "yuidoc-filter-tags": "^0.0.2",
+    "yuidocjs": "^0.3.50"
   },
   "peerDependencies": {
     "pixi.js": "^1.6.1"
