--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pixiapp",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "main": "bin/pixiapp.js",
   "description": "Manage startup and mainloop of a PIXI.js application",
   "repository": {
@@ -19,13 +19,13 @@
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.0",
     "jasmine-node": "^2.0.0-beta4",
-    "pixi.js": "^1.6.1",
+    "pixi.js": "2.*.*",
     "qsub": "0.0.6",
     "yuidoc-die-on-warnings": "^0.0.2",
     "yuidoc-filter-tags": "^0.0.2",
     "yuidocjs": "^0.3.50"
   },
   "peerDependencies": {
-    "pixi.js": "*"
+    "pixi.js": "2.*.*"
   }
 }
