--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pixiapp",
-  "version": "3.0.2",
-  "main": "bin/pixiapp.js",
+  "version": "3.1.0",
+  "main": "src/PixiApp.js",
   "description": "Manage startup and mainloop of a PIXI.js application",
   "repository": {
     "type": "git",
@@ -17,10 +17,13 @@
     "async": "^0.9.0",
     "browserify": "^6.1.0",
     "grunt": "^0.4.5",
+    "grunt-browserify": "^4.0.1",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-copy": "^0.8.1",
+    "grunt-contrib-yuidoc": "^0.10.0",
+    "grunt-ftpuploadtask": "^0.1.2",
     "jasmine-node": "^2.0.0-beta4",
-    "pixi.js": "3.0.7",
+    "pixi.js": "3.0.9",
     "qsub": "0.0.6",
     "yuidoc-die-on-warnings": "^0.0.2",
     "yuidoc-filter-tags": "^0.0.2",
@@ -28,5 +31,8 @@
   },
   "peerDependencies": {
     "pixi.js": "3.*.*"
+  },
+  "dependencies": {
+    "yaed": "^1.0.2"
   }
 }
